src/nationalarchives/components/picture/_index.scss
@use "../../utilities/global"; // To get %tna-invert
@use "../../tools/colour";

.tna-picture {
  margin: 0 0 1rem;
  padding: 0;

  &__image-wrapper {
    // padding: 1rem 0;

    position: relative;

    background-color: #f4f4f4;
  }

  &__image {
    height: auto;
    margin: 0 auto;
  }

  &__toggle-transcript {
    position: absolute;
    right: 1rem;
    bottom: 1rem;
  }

  &__transcript {
    // @include colour.invert;
    @extend %tna-invert;

    padding: 1rem 1.5rem 0.5rem;

    .tna-template--clicked &:focus {
      outline: none;
    }

    .tna-tabs__list-item-link {
      @include colour.colour-font("font-dark", true);

      &::after {
        @include colour.colour-background("keyline-dark", true);
      }

      .tna-template--js-enabled & {
        @include colour.colour-font("font-light", true);

        &--selected {
          @include colour.colour-font("font-dark", true);
        }
      }
    }
  }

  &__caption {
    padding: 1rem 0;

    // position: relative;

    text-align: center;

    border-bottom: 1px solid;
    @include colour.colour-border("keyline");

    // &::after {
    //   height: 1px;

    //   position: absolute;
    //   right: 20%;
    //   bottom: 0;
    //   left: 20%;

    //   @include colour.colour-background("keyline");

    //   content: "";
    // }
  }
}

